# djvu2mask

./: #bad3.log#  #badcompilation.log#  Makefile  Makefile.in  README.md  aclocal.m4  autogen.sh  config.h  config.status  configure.ac  configure~  djvu2maskBF.py  libtool
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1
config/: config.h.in~
desktopfiles/: Makefile  Makefile.in
libdjvu/: Makefile  Makefile.in  ddjvuapi.pc  libdjvulibre.la  libdjvulibre_la-Arrays.lo  libdjvulibre_la-BSByteStream.lo  libdjvulibre_la-BSEncodeByteStream.lo  libdjvulibre_la-ByteStream.lo  libdjvulibre_la-DataPool.lo  libdjvulibre_la-DjVmDir.lo  libdjvulibre_la-DjVmDir0.lo  libdjvulibre_la-DjVmDoc.lo  libdjvulibre_la-DjVmNav.lo  libdjvulibre_la-DjVuAnno.lo  libdjvulibre_la-DjVuDocEditor.lo  libdjvulibre_la-DjVuDocument.lo  libdjvulibre_la-DjVuDumpHelper.lo  libdjvulibre_la-DjVuErrorList.lo  libdjvulibre_la-DjVuFile.lo  libdjvulibre_la-DjVuFileCache.lo  libdjvulibre_la-DjVuGlobal.lo  libdjvulibre_la-DjVuGlobalMemory.lo  libdjvulibre_la-DjVuImage.lo  libdjvulibre_la-DjVuInfo.lo  libdjvulibre_la-DjVuMessage.lo  libdjvulibre_la-DjVuMessageLite.lo  libdjvulibre_la-DjVuNavDir.lo  libdjvulibre_la-DjVuPalette.lo  libdjvulibre_la-DjVuPort.lo  libdjvulibre_la-DjVuText.lo  libdjvulibre_la-DjVuToPS.lo  libdjvulibre_la-GBitmap.lo  libdjvulibre_la-GContainer.lo  libdjvulibre_la-GException.lo  libdjvulibre_la-GOS.lo  (+26 more)
tools/: Makefile  Makefile.am  Makefile.in  ddjvu  ddjvu.cpp  ddjvu1.cpp  djvu2mask.cpp
tools/.deps/: ddjvu-ddjvu.Tpo  ddjvu-tiff2pdf.Po
tools/.libs/: ddjvu
(+67 files in other folders)
